--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -125,6 +125,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Characters/Player/player.gd"
 }, {
+"base": &"Resource",
+"class": &"SaveGame",
+"icon": "",
+"language": &"GDScript",
+"path": "res://GameSystem/save/SaveGame.gd"
+}, {
 "base": &"Equippables",
 "class": &"Seeds",
 "icon": "",
