--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -35,16 +35,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 90,
-"scroll_position": 53.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 89,
-"selection_to_column": 21,
-"selection_to_line": 90,
+"row": 45,
+"scroll_position": 27.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -257,10 +253,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 39,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -271,11 +267,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 39,
-"scroll_position": 17.0,
+"row": 17,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -316,13 +312,13 @@ state={
 "column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
+"row": 10,
 "scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 1,
-"selection_from_line": 24,
-"selection_to_column": 75,
-"selection_to_line": 24,
+"selection_from_line": 10,
+"selection_to_column": 14,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -331,12 +327,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 14.0,
-"selection": false,
+"row": 3,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 3,
+"selection_to_column": 75,
+"selection_to_line": 3,
 "syntax_highlighter": "GDScript"
 }
 
@@ -345,10 +345,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
+"row": 34,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -401,11 +401,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 106,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 9.0,
+"row": 4,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -418,7 +418,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 1,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -457,16 +457,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 77,
-"scroll_position": 47.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 77,
-"selection_to_column": 16,
-"selection_to_line": 77,
+"row": 66,
+"scroll_position": 48.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -475,16 +471,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 23,
-"selection_from_line": 22,
-"selection_to_column": 27,
-"selection_to_line": 22,
+"row": 24,
+"scroll_position": 4.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -493,11 +485,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 18.0,
+"row": 44,
+"scroll_position": 24.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -571,12 +563,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 77,
-"scroll_position": 49.0,
-"selection": false,
+"row": 21,
+"scroll_position": 6.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 21,
+"selection_to_column": 31,
+"selection_to_line": 22,
 "syntax_highlighter": "GDScript"
 }
 
@@ -645,10 +641,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 21,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -691,12 +687,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 80,
-"scroll_position": 61.0,
-"selection": false,
+"row": 27,
+"scroll_position": 18.0,
+"selection": true,
+"selection_from_column": 31,
+"selection_from_line": 27,
+"selection_to_column": 42,
+"selection_to_line": 27,
 "syntax_highlighter": "GDScript"
 }
 
@@ -759,7 +759,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 40,
-"scroll_position": 28.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -783,16 +783,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
+"row": 23,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 11,
-"selection_to_column": 15,
-"selection_to_line": 11,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -829,15 +825,43 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 72,
-"scroll_position": 41.0,
+"row": 108,
+"scroll_position": 84.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://GameSystem/seasonSummary.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 75,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 6,
-"selection_from_line": 72,
-"selection_to_column": 16,
-"selection_to_line": 72,
+"selection_from_column": 21,
+"selection_from_line": 2,
+"selection_to_column": 75,
+"selection_to_line": 2,
+"syntax_highlighter": "GDScript"
+}
+
+[res://UI/summary/summaryGui.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 37,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 58,
+"scroll_position": 20.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
