--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/Sprout Lands - Sprites - premium pack/Objects/Mushrooms, Flowers, Stones.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/menu/", "res://UI/dialog/", "res://resources/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/", "res://resources/Sprout Lands - UI Pack - Premium pack/UI Sprites/Dialouge UI/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://GameSystem/", "res://GameSystem/save/", "res://GameSystem/music/", "res://GameSystem/mainMenu/", "res://GameSystem/dialog/", "res://Characters/", "res://Characters/Player/", "res://Characters/Player/Inventory/")
+dock_filesystem_selected_paths=PackedStringArray("res://GameSystem/mainMenu/mainMenu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://GameSystem/", "res://GameSystem/mainMenu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://GameSystem/animals/waterTrough.tscn", "res://UI/summary/summaryGui.tscn", "res://Characters/Animals/Cow.tscn", "res://Characters/Animals/chicken.tscn", "res://UI/inventory/inventory_gui.tscn", "res://UI/inventory/itemSlotGui.tscn", "res://UI/hotbar/hotbar.tscn", "res://UI/hotbar/hotbarSlotGui.tscn", "res://GameSystem/music/music.tscn", "res://GameSystem/dialog/textbox.tscn", "res://UI/dialog/dialogBox.tscn", "res://GameSystem/animals/foodTrough.tscn")
-current_scene="res://Levels/gameLevel.tscn"
-center_split_offset=-496
+open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://GameSystem/mainMenu/mainMenu.tscn")
+current_scene="res://GameSystem/mainMenu/mainMenu.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=11
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://GameSystem/animals/animal.gd", "res://GameSystem/dialog/animalLand.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://UI/dialog/dialogBox.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://GameSystem/save/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://UI/HUD/hud.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://GameSystem/animals/itemAnimals.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://GameSystem/shop/itemSlot.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://GameSystem/mainMenu/MainMenu.gd", "res://UI/notebook/market.gd", "res://UI/menu/menu_gui.gd", "res://UI/notebook/notebook.gd", "res://UI/notebook/notebookIcon.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://GameSystem/save/SaveLoadGame.gd", "res://GameSystem/seasonSummary.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/shop/sellItemSlot.gd", "res://GameSystem/shop/ShopInventory.gd", "res://UI/summary/summaryGui.gd", "res://UI/notebook/Tasks.gd", "res://GameSystem/tasks/Tasks.gd", "res://UI/notebook/tasks/taskSlot.gd", "res://GameSystem/dialog/textbox.gd", "res://GameSystem/dialog/textManager.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
-selected_script="res://GameSystem/TimeManager.gd"
+selected_script="res://GameSystem/mainMenu/MainMenu.gd"
 open_help=["CollisionShape2D", "Dictionary", "Node", "Object", "ResourceLoader", "ResourceSaver"]
 script_split_offset=247
 list_split_offset=179
