--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,22 +13,22 @@ dock_split_2=-16
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=354
-dock_hsplit_3=-448
+dock_hsplit_3=-502
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://objects/harvestable/waterable.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/items/", "res://resources/", "res://resources/Sprout Lands - Sprites - premium pack/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/ground tiles/water frames/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/", "res://resources/Sprout Lands - Sprites - premium pack/Tilesets/Building parts/Animal Structures/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/", "res://resources/Sprout Lands - Sprites - premium pack/Objects/Items/", "res://objects/", "res://objects/harvestable/", "res://GameSystem/", "res://GameSystem/animals/")
+dock_filesystem_selected_paths=PackedStringArray("res://UI/notebook/tasks/taskKeepAnimals.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://UI/", "res://UI/notebook/", "res://UI/notebook/tasks/", "res://GameSystem/", "res://GameSystem/tasks/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Characters/Player/player.tscn", "res://Levels/gameLevel.tscn", "res://GameSystem/mainMenu/mainMenu.tscn", "res://GameSystem/crops/cabbagePlant.tscn", "res://GameSystem/crops/carrotPlant.tscn", "res://GameSystem/crops/cauliflowerPlant.tscn", "res://GameSystem/crops/cornPlant.tscn", "res://GameSystem/crops/cucumberPlant.tscn", "res://GameSystem/crops/parsnipPlant.tscn", "res://GameSystem/crops/pumpkinPlant.tscn", "res://GameSystem/crops/wheatPlant.tscn")
-current_scene="res://Levels/gameLevel.tscn"
+open_scenes=PackedStringArray("res://Levels/gameLevel.tscn", "res://UI/menu/settingsGUI.tscn", "res://UI/menu/menu_gui.tscn", "res://GameSystem/music/music.tscn")
+current_scene="res://UI/menu/settingsGUI.tscn"
 center_split_offset=-349
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://GameSystem/animals/animal.gd", "res://GameSystem/dialog/animalLand.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://UI/dialog/dialogBox.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://GameSystem/save/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://UI/HUD/hud.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://GameSystem/animals/itemAnimals.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://GameSystem/shop/itemSlot.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://GameSystem/mainMenu/MainMenu.gd", "res://UI/notebook/market.gd", "res://UI/menu/menu_gui.gd", "res://UI/notebook/notebook.gd", "res://UI/notebook/notebookIcon.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://GameSystem/save/SaveLoadGame.gd", "res://GameSystem/seasonSummary.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/shop/sellItemSlot.gd", "res://GameSystem/shop/ShopInventory.gd", "res://UI/summary/summaryGui.gd", "res://UI/notebook/Tasks.gd", "res://GameSystem/tasks/Tasks.gd", "res://UI/notebook/tasks/taskSlot.gd", "res://GameSystem/dialog/textbox.gd", "res://GameSystem/dialog/textManager.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
-selected_script="res://objects/usableItems/tools.gd"
+open_scripts=["res://GameSystem/animals/animal.gd", "res://GameSystem/dialog/animalLand.gd", "res://Characters/Animals/chicken.gd", "res://Characters/Animals/Cow.gd", "res://GameSystem/effects/dayOverlay.gd", "res://UI/dialog/dialogBox.gd", "res://objects/usableItems/equippables.gd", "res://objects/usableItems/equipped.gd", "res://GameSystem/tiles/farmingLand.gd", "res://objects/usableItems/feedItem.gd", "res://GameSystem/animals/foodTrough.gd", "res://Levels/gameLevel.gd", "res://GameSystem/save/gameLevel.gd", "res://UI/GUI.gd", "res://UI/hotbar/hotbar.gd", "res://UI/inventory/hotbarSlotGui.gd", "res://UI/HUD/hud.gd", "res://Characters/Player/Inventory/Inventory.gd", "res://Characters/Player/Inventory/inventoryItem.gd", "res://Characters/Player/Inventory/inventoryTwo.gd", "res://UI/inventory/inventory_gui.gd", "res://objects/pickupItems/item.gd", "res://GameSystem/animals/itemAnimals.gd", "res://UI/itemBar.gd", "res://UI/itemDisplay.gd", "res://UI/hotbar/ItemInHotbarSlotGui.gd", "res://UI/inventory/ItemInSlotGui.gd", "res://objects/usableItems/itemResource.gd", "res://GameSystem/shop/itemSlot.gd", "res://UI/inventory/itemSlotGui.gd", "res://objects/pickupItems/loot.gd", "res://GameSystem/mainMenu/MainMenu.gd", "res://UI/notebook/market.gd", "res://UI/menu/menu_gui.gd", "res://UI/notebook/notebook.gd", "res://UI/notebook/notebookIcon.gd", "res://GameSystem/crops/plantedPlant.gd", "res://Characters/Player/player.gd", "res://objects/harvestable/resourceType.gd", "res://GameSystem/tiles/rockBigSeasons.gd", "res://GameSystem/tiles/rockSmallSeasons.gd", "res://GameSystem/save/SaveLoadGame.gd", "res://GameSystem/seasonSummary.gd", "res://objects/usableItems/seedItems.gd", "res://UI/selectableItem.gd", "res://GameSystem/shop/sellItemSlot.gd", "res://UI/menu/settingsGUI.gd", "res://GameSystem/shop/ShopInventory.gd", "res://UI/summary/summaryGui.gd", "res://UI/notebook/Tasks.gd", "res://GameSystem/tasks/Tasks.gd", "res://UI/notebook/tasks/taskSlot.gd", "res://GameSystem/dialog/textbox.gd", "res://GameSystem/dialog/textManager.gd", "res://GameSystem/tiles/tilledSoil.gd", "res://GameSystem/TimeManager.gd", "res://objects/usableItems/tools.gd", "res://GameSystem/tiles/treeSeasons.gd", "res://GameSystem/animals/waterTrough.gd", "res://GameSystem/tiles/worldTileMap.gd"]
+selected_script="res://UI/menu/settingsGUI.gd"
 open_help=["CollisionShape2D", "Dictionary", "Node", "Object", "ResourceLoader", "ResourceSaver"]
 script_split_offset=247
 list_split_offset=179
